<resources>

    <string name="app_name">Location-ref-app</string>
    <string name="welcome_text">Welcome to Location Reference app</string>
    <string name="settings">Settings</string>
    <string name="authentication_label">Authentication</string>
    <string name="login_title">Participant Login</string>
    <string name="user_login">Login</string>
    <string name="user_code">Code</string>
    <string name="login_label">Participant login</string>
    <string name="login_txt">Enter the Name and Code that has been created for this participant to activate this device</string>
    <string name="user_summ">Please enter your username followed for your password. (No spaces)</string>
    <string name="user_title">Username and Password</string>
    <string name="logout_title">Participant Logout</string>
    <string name="logout_key">logout</string>
    <string name="logout_summ">Logout</string>
    <string name="login_key">login</string>
    <string name="login_summ">No participant assigned</string>
    <string name="cancel_txt">Cancel</string>
    <string name="ok_txt">OK</string>
    <string name="failed_login_label">Failed Login</string>
    <string name="failed_login_txt">The login information you entered does not match any in the system. Please double check that login information has been setup correctly for a participant in your project, and try again.</string>
    <string name="successful_login_label">Successful Login</string>
    <string name="successful_login_txt1">The device has been activated, and assigned to the participant.</string>
    <string name="successful_login_txt2">You now can sync the app, and collect and upload data.</string>
    <string name="successful_login_txt3">Device is assigned to the participant</string>
    <string name="not_logged_msg">You must be logged to have access to this functionality</string>
    <string name="not_logged_part_msg">You must be logged and have participant information to have access to this functionality</string>
    <string name="not_logged_part_per_msg">You must be logged, have participant information and sync periods before to have access to this functionality</string>
    <string name="already_logged_msg">You are already logged</string>
    <string name="not_logged">You are not logged in</string>
    <string name="successful_login_txt4">Select to view participant information</string>
    <string name="participant_label">Participant assigned is </string>
    <string name="project_label">Project Code is </string>
    <string name="project_name_label">and Project Name is </string>
    <string name="part_info_key">participant_info</string>
    <string name="part_info_title">Participant Information</string>
    <string name="part_info_summ">No participant assigned</string>
    <string name="sync_label">Sync Content</string>
    <string name="sync_key">sync</string>
    <string name="sync_per_summ">Select to fetch the project periods</string>
    <string name="sync_per_title">Sync Periods</string>
    <string name="sync_set_summ">Select to fetch the instrument settings</string>
    <string name="sync_set_title">Sync Settings</string>
    <string name="period_key">project</string>
    <string name="period_summ">Select to sync and view periods</string>
    <string name="period_title">Project Periods</string>
    <string name="instrument_sett_key">instrumentSet</string>
    <string name="instrument_sett_summ">Select to view and sync settings</string>
    <string name="instrument_sett_title">Instrument Settings</string>
    <string name="collect_label">Collect Data</string>
    <string name="start_key">start</string>
    <string name="start_summ">Start recording Location data</string>
    <string name="start_title">Start</string>
    <string name="stop_key">stop</string>
    <string name="stop_summ">Stop recording Location data</string>
    <string name="stop_title">Stop</string>
    <string name="upload_label">Upload Data</string>
    <string name="upload_key">upload</string>
    <string name="upload_summ">Start upload of collected data</string>
    <string name="upload_title">Start Upload</string>
    <string name="upload_sample_key">uploadSample</string>
    <string name="upload_sample_summ">Upload some sample records</string>
    <string name="upload_sample_title">Upload Sample Data</string>
    <string name="inform_login_msg">Please, inform username and password before login</string>
    <string name="record_start_msg">Recording started</string>
    <string name="record_stop_msg">Recording stopped</string>
    <string name="upload_msg">Data uploaded</string>
    <string name="upload_failed_msg">There are no data to be uploaded</string>
    <string name="period_label">Period : </string>
    <string name="epoch_label">Epoch : </string>
    <string name="start_date_label">Start Date :</string>
    <string name="end_date_label">End Date :</string>
    <string name="problem_participant">Problems trying to recover participant information.See log to have more information</string>
    <string name="project_period_label">Project Periods</string>
    <string name="instrument_set_label">Instrument Settings</string>
    <string name="no_project_period_msg">There are no periods for this project</string>
    <string name="sync_project_period_msg">Click on Sync Periods to see the periods for this project</string>
    <string name="server_prompt">Choose a server</string>
    <string name="period_code_label">Period Code : </string>
    <string name="unauthorized_msg">Access to API service unauthorized</string>
    <string name="msg_server1">You are going from\u0020</string>
    <string name="msg_server2">\u0020to\u0020</string>
    <string name="msg_server3">\u0020. Are you sure that you want to change servers?</string>
    <string name="title_server">Server</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="setting_label">Setting :</string>
    <string name="setting_code_label">Setting Code :</string>
    <string name="epoch_code_label">Epoch Code :</string>
    <string name="description_label">Description :</string>
    <string name="type_label">Type :</string>
    <string name="value_label">Value :</string>
    <string name="sync_instrument_settings_msg">Click on Sync Instrument Settings to see the settings for this project</string>
    <string name="no_instrument_settings_msg">There are no instrument settings for this project</string>
    <string name="response_error_msg">Error accessing Api Service</string>
    <string name="sync_msg">"We strongly recommend to sync Periods and Instrument Settings before you start recording data. What would you like to do ?"</string>
    <string name="sync_msg_title">Alert</string>
    <string name="go_start">Start recording data</string>
    <string name="go_sync">Cancel recording data</string>
    <string name="record_msg">Recording location&#8230;</string>
    <string name="sync_completed">Sync has been completed</string>
    <string name="period_closed_msg">There is no period active for this project</string>
    <string name="already_have_part_msg">You already have participant information</string>
</resources>