<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/syncPerLabel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#FFD3D3D3"
        android:text="@string/sync_label"
        android:textColor="#FFFFFFFF"
        android:textSize="14.0sp"
        android:textStyle="bold"
        android:typeface="sans" />

    <TextView
        android:id="@+id/syncPerTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:onClick="onClick"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:text="@string/sync_per_title"
        android:textSize="22.0sp"
        android:typeface="sans" />

    <TextView
        android:id="@+id/syncPerSumm"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingLeft="5dp"
        android:text="@string/sync_per_summ"
        android:textSize="14.0sp"
        android:typeface="sans" />

    <TextView
        android:id="@+id/projectPeriodLabel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#FFD3D3D3"
        android:text="@string/project_period_label"
        android:textColor="#FFFFFFFF"
        android:textSize="14.0sp"
        android:textStyle="bold"
        android:typeface="sans" />

    <ListView
        android:id="@+id/perList"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:fadingEdge="vertical"
        android:fadingEdgeLength="10dp"
        android:listSelector="#00000000"
        android:longClickable="true" >
    </ListView>

</LinearLayout>