<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="#DCDCDC"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="20dip"
        android:paddingLeft="20dip"
        android:paddingRight="20dip"
        android:paddingTop="20dip"
        android:text="@string/login_txt"
        android:textColor="#000000"
        android:textSize="18.0sp"
        android:typeface="sans" />

    <EditText
        android:id="@+id/loginCode"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:hint="@string/user_login"
        android:singleLine="true"
        android:textSize="16.0sp"
        android:typeface="sans" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/code"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:hint="@string/user_code"
        android:paddingBottom="20dip"
        android:singleLine="true"
        android:textSize="16.0sp"
        android:typeface="sans" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dip" >

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/user_login"
            android:textSize="17.0sp"
            android:typeface="sans" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/cancel_txt"
            android:textSize="17.0sp"
            android:typeface="sans" />
    </LinearLayout>

</LinearLayout>