<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lblListHeader"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/instrumentLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1.0dip"
            android:layout_marginTop="9.0dip"
            android:text="@string/setting_label"
            android:textSize="16.0sp"
            android:textStyle="bold"
            android:typeface="sans" />

        <TextView
            android:id="@+id/instrument"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1.0dip"
            android:layout_marginTop="9.0dip"
            android:textSize="16.0sp"
            android:typeface="sans" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/instrumentCodeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="13sp"
            android:text="@string/setting_code_label"
            android:textSize="14.0sp"
            android:typeface="sans" />

        <TextView
            android:id="@+id/instrumentCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14.0sp"
            android:typeface="sans" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/descriptionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description_label"
            android:paddingLeft="13sp"
            android:textSize="14.0sp"
            android:typeface="sans" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14.0sp"
            android:typeface="sans" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/typeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_label"
            android:paddingLeft="13sp"
            android:textSize="14.0sp"
            android:typeface="sans" />

        <TextView
            android:id="@+id/type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14.0sp"
            android:typeface="sans" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/valueLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value_label"
            android:paddingLeft="13sp"
            android:textSize="14.0sp"
            android:typeface="sans" />

        <TextView
            android:id="@+id/value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14.0sp"
            android:typeface="sans" />
    </LinearLayout>
    
        <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/periodCodeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/period_code_label"
            android:paddingLeft="13sp"
            android:textSize="14.0sp"
            android:typeface="sans" />

        <TextView
            android:id="@+id/periodCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14.0sp"
            android:typeface="sans" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/epochCodeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/epoch_code_label"
            android:paddingLeft="13sp"
            android:textSize="14.0sp"
            android:typeface="sans" />

        <TextView
            android:id="@+id/epochCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14.0sp"
            android:typeface="sans" />
    </LinearLayout>

</LinearLayout>