<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="55dip"
    android:orientation="vertical"
    android:id="@+id/lblListItem" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/epochLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/epoch_label"
            android:textSize="15.0sp"
            android:textStyle="bold"
            android:typeface="sans" />

        <TextView
            android:id="@+id/epoch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15.0sp"
            android:typeface="sans" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/startDateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:text="@string/start_date_label"
            android:textSize="14.0sp"
            android:typeface="sans" />

        <TextView
            android:id="@+id/startDateEpoch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14.0sp"
            android:typeface="sans" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/endDateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:text="@string/end_date_label"
            android:textSize="14.0sp"
            android:typeface="sans" />

        <TextView
            android:id="@+id/endDateEpoch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="9.0dip"
            android:textSize="14.0sp"
            android:typeface="sans" />
    </LinearLayout>

</LinearLayout>